// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SplitButton renders with all props 1`] = `
<button
  className="btn btn-icon-split my-class disabled btn-lg btn-danger"
  disabled={true}
>
  <span
    className="icon text-white-50"
  >
    <i
      className="fas fa-archive fa-fw"
    />
  </span>
  <span
    className="text"
  >
    Text
  </span>
</button>
`;

exports[`SplitButton renders with minimal props 1`] = `
<button
  className="btn btn-icon-split"
>
  <span
    className="icon text-white-50"
  >
    <i
      className="fas fa-archive fa-fw"
    />
  </span>
  <span
    className="text"
  />
</button>
`;
